--- a/src/HoalBundle/Resources/views/Default/teste.html.twig
+++ b/src/HoalBundle/Resources/views/Default/teste.html.twig
@@ -13,23 +13,17 @@
             </div>
             <div class="list-group">
                 {% for menu in menus %}
-                    <a href="{{ menu.nome|lower }}"> <li>{{ menu.nome|e }}</li></a>
-                    {% if menu.id > 1 %}
-                    <a href="#" class="list-group-item active">Cras justo odio</a>
-                    <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                    <a href="#subTest" class="list-group-item">Sub menù test</a>
-                </div>
-                <div class="list-group submenu" id="subTest">
-                    <a href="#" class="list-group-item">Morbi leo risus</a>
-                    <a href="#subTestSub" class="list-group-item">Sub di Sub</a>
-                    <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                </div> 
-
-                <div class="list-group submenu" id="subTestSub">
-                    <a href="#" class="list-group-item">Morbi leo risus</a>
-                    <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                </div> 
+                    {% for subMenu in subMenus %}
+                        <a href="{% if subMenu.id == menu.id %}#subTeste{{ else }}{{ menu.nome|lower }}{% endif %}"  class="list-group-item"> <li>{{ menu.nome|e }}</li></a>
+                                {% if menu.id > 1 %}
+                        </div>
+                        <div class="list-group submenu" id="subTest">
+                            <a href="#" class="list-group-item">Morbi leo risus</a>
+                            <a href="#" class="list-group-item">Sub di Sub</a>
+                            <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                        </div> 
                     {% endif %}
+                {% endfor %}
             {% endfor %}
         </div>
         <!--/Test -->
